# cookiecutter_modern_py

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Dockerfile  docker_entrypoint.sh  pyproject.toml
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
